# codabench-loadtest

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  locust.conf  locust.example.conf  pyproject.toml
.github/env/: .env.example  dev.env
.github/workflows/: ci.yml  deploy-infra.yml
codabench-loadtest-tests/: test_config.py
codabench_loadtest/: locustfile.py  run.py
codabench_loadtest/clients/: __init__.py  base_api_client.py  locust_api_client.py
codabench_loadtest/common/: __init__.py  api_client.py  base_api_client.py  config.py  environment_setup.py  locust_api_client.py
codabench_loadtest/models/: __init__.py  submisisons.py  user_pool.py  users.py
codabench_loadtest/scenarios/: __init__.py  environment_setup.py  locustfile.py  main.py  utils.py
codabench_loadtest/scenarios/common/: __init__.py  api_client.py  config.py
codabench_loadtest/scenarios/models/: __init__.py  user_pool.py
codabench_loadtest/scenarios/users/: __init__.py  classical_user.py  clumsy_user.py  smoke_user.py  submitter_user.py
data/: model_with_pi.py  model_with_sleep.py
docs/: Gemfile  README.md  _config.yml
docs/aws/: cloud.md  codabench.md  loadtest.md
infra/: main.tf  outputs.tf  provider.tf  variables.tf
infra/modules/ec2/: main.tf  outputs.tf  variables.tf
infra/modules/s3_deploy/: main.tf  outputs.tf  variables.tf
infra/modules/security_groups/: main.tf  outputs.tf  variables.tf
infra/modules/vpc/: main.tf  outputs.tf  variables.tf
infra/modules/workers/: main.tf  outputs.tf  variables.tf
infra/templates/: codabench.sh.tftpl  minio.sh.tftpl  nginx-minio-lb.sh.tftpl  worker.sh.tftpl
scenarios/common/: api_client.py  config.py
tests/: test_config.py
