[project]
name = "codabench-loadtest"
version = "0.1.0"
description = "Repository for load testing the codabench platform."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[dependency-groups]

dev = [
    "bandit>=1.9.4",
    "pre-commit>=4.6.0",
    {include-group = "format"},
    {include-group = "lint"},
    {include-group = "typing"},
    {include-group = "test"},
    "databricks>=0.2",
    "databricks-connect>=16.1.7",
]

test = [
    "coverage>=7.14.1",
    "pytest>=8.4.2",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.15.1",
    "pytest-retry>=1.7.0",
]

format = [
    "black>=26.5.1",
    "isort>=8.0.1",
]

lint = [
    "ruff>=0.15.16",
]

typing = [
    "pyright>=1.1.410",
]


# -----------------------------------------------
# Development tools
# -----------------------------------------------

[tool.setuptools]
py-modules = []

[tool.uv]
package = true

[tool.black]
line-length = 88
target-version = ["py311"]
extend-exclude = '''
(
  | \.venv
)
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"

[tool.bandit]
exclude_dirs = [".venv"]
skips = []
targets = []

[tool.coverage.run]
branch = true