[project]
name = "codabench-loadtest"
version = "0.1.0"
description = "Repository for load testing the codabench platform."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "locust>=2.45.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.0",
    "pydantic-settings>=2.9.0",
]

[project.scripts]
loadtest = "codabench_loadtest.run:main"


[dependency-groups]

dev = [
    "bandit>=1.9.4",
    "pre-commit>=4.6.0",
    {include-group = "format"},
    {include-group = "lint"},
    {include-group = "typing"},
    {include-group = "test"},
]

test = [
    "coverage>=7.14.1",
    "pytest>=8.4.2",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.15.1",
    "pytest-retry>=1.7.0",
]

format = [
    "black>=26.5.1",
    "isort>=8.0.1",
]

lint = [
    "ruff>=0.15.16",
]

typing = [
    "pyright>=1.1.410",
]

frontend = [
    "playwright>=1.52.0",
]

reports = [
    "pandas>=2.3.0",
]


# -----------------------------------------------
# Development tools
# -----------------------------------------------

[tool.setuptools.packages.find]
include = ["codabench_loadtest", "scenarios*"]

[tool.uv]
package = true

[tool.black]
line-length = 88
target-version = ["py313"]
extend-exclude = '''
(
  | \.venv
)
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"

[tool.bandit]
exclude_dirs = [".venv"]
skips = []
targets = []

[tool.coverage.run]
branch = true
